# kenosis

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  runtime.yml
apps/kenosis-cli/: Cargo.toml
apps/kenosis-cli/src/: main.rs
apps/kenosis-cli/src/commands/: cast.rs  diff.rs  inspect.rs  mod.rs  quantize.rs  validate.rs
crates/kenosis-core/: Cargo.toml
crates/kenosis-core/src/: cast.rs  diff.rs  error.rs  inspect.rs  lib.rs  model.rs  proto.rs  static_int8.rs
crates/kenosis-core/tests/: accuracy.rs
docs/: QUANTIZATION_FINDINGS.md  whitepaper.md
