[workspace]
resolver = "2"
members = [
    "crates/kenosis-core",
    "apps/kenosis-cli",
]
exclude = ["runtime"]

[workspace.package]
version = "0.3.4"
edition = "2021"
license = "Apache-2.0"
homepage = "https://coreepoch.dev"
repository = "https://github.com/CoreEpoch/kenosis"
authors = ["Core Epoch <core@coreepoch.dev>"]
