[package]
name = "kenosis-cli"
description = "CLI for ONNX model quantization, casting, inspection, and comparison — powered by kenosis-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
rust-version = "1.79"
keywords = ["onnx", "quantization", "ml", "cli", "deep-learning"]
categories = ["command-line-utilities", "science", "compression"]

[[bin]]
name = "kenosis"
path = "src/main.rs"

[dependencies]
kenosis-core = { path = "../../crates/kenosis-core", version = "1.0.0", features = ["calibrate"] }
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
indicatif = "0.17"
owo-colors = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
